@@ -9,14 +9,21 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 public class DocumentMapper {
-    public static DocumentDto mapToDocumentDto(Document document) {
+
+
+
+    public static DocumentDto mapToDocumentDto(Document document, List<DocumentDetail> documentDetail) {
         // Convert List<DocumentDetail> to Map<String, String>
-        Map<String, String> body = document.getBody().stream()
+//        Map<String, String> body = document.getBody().stream()
+//                .collect(Collectors.toMap(
+//                        DocumentDetail::getDocumentDetailKey,  // Map key: language (e.g., "fa", "en")
+//                        DocumentDetail::getDocumentDetailValue     // Map value: content (e.g., "سلام", "hello")
+//                ));
+        Map<String, String> body=documentDetail.stream()
                 .collect(Collectors.toMap(
                         DocumentDetail::getDocumentDetailKey,  // Map key: language (e.g., "fa", "en")
                         DocumentDetail::getDocumentDetailValue     // Map value: content (e.g., "سلام", "hello")
                 ));
-
         // Return the DocumentDto with the identifier and the mapped body
         return new DocumentDto(
                 document.getIdentifier(),
@@ -31,7 +38,12 @@ public class DocumentMapper {
 
 
     public static Document mapToDocument(DocumentDto documentDto) {
+
+
+
+
         Document document = new Document();
+
         document.setIdentifier(documentDto.getIdentifier());
 
         // Map the body to a List<DocumentDetail>
@@ -39,10 +51,21 @@ public class DocumentMapper {
                 .entrySet()
                 .stream()
                 .map(entry -> new DocumentDetail(null, entry.getKey(), entry.getValue(), document))
-                .collect(Collectors.toList());
+                .toList();
 
-        document.setBody(body);
+
+
+        for (DocumentDetail dd : body){
+
+            documentDetailRepository.save(dd);
+
+        }
+
+
+
 
         return document;
     }
+
+
 }
